Implement login/logout

--- a/starter/app/build.gradle
+++ b/starter/app/build.gradle
@@ -112,5 +112,5 @@ dependencies {
 
     // Firebase
     implementation "com.firebaseui:firebase-ui-auth:$firebaseUiAuthVersion"
-    implementation "com.google.firebase:firebase-auth-ktx:$firebaseAuthKtxVersion"
+    implementation("com.google.firebase:firebase-auth-ktx")
 }
